<resources>
    <string name="app_name">JustTap!</string>
    <string name="title_home">JustTap!</string>
    <string name="title_start">New Game</string>
    <string name="title_notifications">Notifications</string>
    <string name="help_intro">Welcome to JustTap!</string>
    <string name="help_score">Your current average as well as mistakes are displayed here.</string>
    <string name="help_mechanic1">These are called warps, tap them quickly!</string>
    <string name="help_mechanic2">Some warps move, don\'t let them get away!</string>
    <string name="help_mechanic3">Watch out don\'t touch the black holes</string>
    <string name="label_score">SCORE:</string>
    <string name="label_time">TIME LEFT:</string>
    <string name="label_score_getready">Warmup!</string>
    <string name="label_score_excellent">EXCELLENT</string>
    <string name="label_score_great">GREAT!</string>
    <string name="label_score_good">GOOD!</string>
    <string name="label_score_okay">OKAY!</string>
    <string name="label_RESUME">Resume Game</string>
    <string name="bonustimegreat">BONUS TIME!</string>
    <string name="label_minustime">MINUS TIME</string>
    <string name="label_RESTARTGAME">Start Over</string>
    <string name="PAUSE_ExitButton">Leave Game</string>
    <string name="label_score_miss">Missed!</string>
    <string name="label_blackhole_good">GREAT JOB!</string>
    <string name="label_start_game">Start Game!</string>
    <string name="label_settings">Settings</string>
    <string name="label_leaderboards">Leaderboards</string>
    <string name="label_title">Just Tap!</string>
    <string name="menu_login_welcome">To get started with online features, you\'ll need to either create an account, or login to an existing one! \n You can always skip this and logon later!</string>
    <string name="label_login">Login</string>
    <string name="label_createAccount">New Account</string>
    <string name="label_Later">Later...</string>
    <string name="label_skipLogin">Skip Login</string>
    <string name="label_username">Username...</string>
    <string name="label_enterusername">Enter Username Here...</string>
    <string name="label_enterpass">Enter Password...</string>
    <string name="label_confirmpass">Confirm Pass... </string>
    <string name="label_emailenter">Enter Email... </string>
    <string name="label_continue">Continue</string>
    <string name="label_text_accountcreation">Hey There! You\'re almost ready, just fill out the fields below and hit continue to get started!</string>
    <string name="label_welcome_header">Welcome to JustTap!</string>
    <string name="label_welcometojusttap">Welcome to JustTap!</string>
    <string name="label_timenocolon">Time</string>
    <string name="label_scoreFormatted">Score</string>
    <string name="title_activity_gamescreen__game_over">Gamescreen_GameOver</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_game_over_main">GameOver_main</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="label_retry">Retry</string>
    <string name="label_gameover">Game Over</string>
    <string name="label_totalscore">Total Score</string>
    <string name="label_warpspopped">Warps Popped</string>
    <string name="label_averagetime">Average Time</string>
    <string name="label_missedtotal">Amount Missed</string>
    <string name="label_yourscore">Your Score</string>

</resources>
