<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:id="@+id/MENU_CreateLogin_Header"
        android:layout_width="236dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_welcome_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/MENU_CreateLogin_ContinueButton"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/line"
        android:text="@string/label_continue"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/MENU_CreateLogin_ProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/MENU_CreateLogin_ContinueButton"
        app:layout_constraintLeft_toLeftOf="@+id/MENU_CreateLogin_ContinueButton"
        app:layout_constraintRight_toRightOf="@+id/MENU_CreateLogin_ContinueButton"
        app:layout_constraintTop_toTopOf="@+id/MENU_CreateLogin_ContinueButton" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="246dp"
        android:layout_height="254dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toTopOf="@+id/MENU_CreateLogin_ProgressBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/MENU_Welcome_UsernameIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/linerec"
                android:ems="10"
                android:hint="@string/label_username"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/background_dark"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MENU_CreateLogin_Header" />

            <EditText
                android:id="@+id/MENU_Welcome_PassIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linerec"
                android:ems="10"
                android:hint="@string/label_enterpass"
                android:inputType="textPassword"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/background_dark"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MENU_CreateLogin_Email" />

            <EditText
                android:id="@+id/MENU_Welcome_ConfirmPassIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/linerec"
                android:ems="10"
                android:hint="@string/label_confirmpass"
                android:inputType="textPassword"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/background_dark"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ENU_CreateLogin_Pass" />

            <EditText
                android:id="@+id/MENU_Welcome_EmailIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/linerec"
                android:ems="10"
                android:hint="@string/label_emailenter"
                android:inputType="textPersonName"
                android:singleLine="false"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textColorHint="@android:color/background_dark"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/MENU_CreateLogin_UnameEntry" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_text_accountcreation"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MENU_CreateLogin_Header" />

</android.support.constraint.ConstraintLayout>